# statescape

./: LICENSE  README.md  pyproject.toml
src/statescape/: __init__.py
src/statescape/core/: conformer.py
src/statescape/filters/: __init__.py
src/statescape/metrics/: __init__.py  registry.py  structure.py  trajectory.py
