[project]
name = "statescape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emiliano Salinas", email = "esalinasbio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
statescape = "statescape:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
